# streampro-assignment-etl

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: dev.env  prod.env  test.env
data/: users_2025-09-09.csv
data/.minio.sys/: format.json
data/.minio.sys/tmp/.trash/17c2e231-3a2e-4620-b92f-03a8de2456c7/: xl.meta.bkp
data/.minio.sys/tmp/.trash/1985dbaa-3a6b-4809-a99e-6b20c96823d2/: xl.meta.bkp
data/.minio.sys/tmp/.trash/1be96755-5f0b-457f-af93-41457d61fa55/: xl.meta.bkp
data/.minio.sys/tmp/.trash/2c6979e1-39ca-40fb-aeee-8f932c871628/: xl.meta.bkp
data/.minio.sys/tmp/.trash/395e1549-944a-4137-9443-ba3a25819229/: xl.meta.bkp
data/.minio.sys/tmp/.trash/3b8d1e7a-2ca6-4753-a910-8910ded26c52/: xl.meta.bkp
data/.minio.sys/tmp/.trash/48c34cbc-b3cf-4714-b350-70d33af87973/: xl.meta.bkp
data/.minio.sys/tmp/.trash/5b387d0e-a683-4d72-a51b-a2e0ad84a568/: xl.meta.bkp
data/.minio.sys/tmp/.trash/5e03f337-1b15-419e-b943-7ec762967a93/: xl.meta.bkp
data/.minio.sys/tmp/.trash/6d1bd436-fac7-4b92-ab46-14f3e38998b8/: xl.meta.bkp
data/.minio.sys/tmp/.trash/8f64f77f-f12e-4704-90af-7fbe282a0b13/: xl.meta.bkp
data/.minio.sys/tmp/.trash/a35dc949-5496-45cc-ab2d-c63645e2ffbc/: xl.meta.bkp
data/.minio.sys/tmp/.trash/acb097f3-0b9a-4a48-b539-7728acaed025/: xl.meta.bkp
data/.minio.sys/tmp/.trash/bdd4eba3-ed29-4bef-9ca8-8383e77014cd/: xl.meta.bkp
data/.minio.sys/tmp/.trash/c64f3fe7-367e-4819-a997-88bd8212a227/: xl.meta.bkp
data/.minio.sys/tmp/.trash/cc1a666c-725a-42b9-9df9-a6e598945244/: xl.meta.bkp
data/landing/: devices_2025-09-09.csv  videos_2025-09-09.csv
infra/: init-databases.sql
infra/trino/etc/: node.properties
infra/trino/etc/catalog/: hive.properties
src/connect/: duckdb_client.py  minio_client.py  trino_client.py
src/core/: base_processor.py  job_manager.py  landing_to_raw_processor.py  raw_to_trusted_processor.py
src/jobs/: pipeline.py  to_raw.py  to_trusted.py
src/notebooks/: analysis.ipynb
src/utils/: __init__.py  config.py  schema_registry.py
(+2 files in other folders)
